#6895 execute acceptance test and deploy to nexus